examples/test/testpolicy8516.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8516
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key14: value28
      key36: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value18
          key40: value35
      podSelector:
        matchLabels:
          key38: value41
          key39: value47
